--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ VITE_CONTACTAPI_PRODURL ="https://api-growwth-prod.growwthpartners.in/api"
 VITE_REACT_APP_NETLIFY_BUILD_HOOK_URL = "https://api.netlify.com/build_hooks/68ede6d2cd4867138d89a868"
 VITE_ADMIN_PASSWORD ="Gr0w!wth#P@rtN3rs(25puk"
 VITE_ADMIN_USERNAME = "adminPage123"
+VITE_SITE_KEY = "6LfOzhksAAAAAFeJbqCg-9bCruiUfjj0tJcqxb82"
+SITE_SECRET = "6LfOzhksAAAAAEDlcVSQIGN1hDuNNQ2gVQObMaA5"
